# AlphaEngine

./: .gitignore  CMakeLists.txt  Changelog.txt  README.md
.git-cleanCppProject/: config  index  packed-refs
.git-cleanCppProject/logs/: HEAD
.git-cleanCppProject/objects/pack/: pack-07d50e39df0ae43a2dd5f658b9aa7c2567e25c07.idx  pack-07d50e39df0ae43a2dd5f658b9aa7c2567e25c07.pack
.git-cleanCppProject/refs/heads/: master
Assets/: Bust.fbx  Cube.fbx  Sphere.fbx  StanLee.mtl  StanfordDragon.fbx  Tile.fbx
CMake/: cleanCppExtensions.cmake
Data/: CMakeLists.txt
Packaging/: CMakeLists.txt
Shaders/: AnimatedObject.vs.glsl  Cubemaps.fs.glsl  Cubemaps.vs.glsl  DebugDepth.fs.glsl  DebugDepth.vs.glsl  DebugNormal.fs.glsl  DebugNormal.gs.glsl  DebugNormal.vs.glsl  Default.glsl  Defines.glsl  Depth.vs.glsl  Flat.fs.glsl  Flat.vs.glsl  Forward.fs.glsl  Forward.vs.glsl  MeshShader.glsl  Pbr.fs.glsl  Pbr.vs.glsl  Skybox.fs.glsl  Skybox.vs.glsl  StaticObject.vs.glsl  Toolkit.glsl
Shaders/Alpha/: Light.glsl  Utils.glsl
Shaders/Alpha/Pbr/: PbrFunction.glsl
Shaders/AlphaShaders/: Material.glsl  Transform.glsl
Shaders/AlphaShaders/Pbr/: MicrofacetFunction.glsl
Shaders/Backups/: Forward.fs.glsl
Source/: Application.cpp  CMakeLists.txt  EntryPoint.cpp  Version.cpp.in  Version.hpp
Source/Alpha/: Version.h
Source/Alpha/Application/: Application.cpp  Application.h
Source/Alpha/Core/: Collection.h  CoreMacros.h  CoreMinimal.h  Library.h  Logger.h  Math.h  Types.h  Utils.h
Source/Alpha/Core/BSpline/: BSpline.cpp  BSpline.h  TensorProduct.h
Source/Alpha/Core/Math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Random.cpp  Random.h
Source/Alpha/Core/Math/BSpline/: BSpline.cpp  BSpline.h  TensorProduct.cpp  TensorProduct.h
Source/Alpha/Engine/: EngineMinimal.cpp  EngineMinimal.h
Source/Alpha/Engine/Animation/: Animation.cpp  Animation.h  Bone.cpp  Bone.h  BoneAnimation.cpp  BoneAnimation.h  BoneTransform.cpp  BoneTransform.h  KeyFrame.h
Source/Alpha/Engine/BSpline/: BSpline.cpp  BSpline.h  BSplineController.cpp  BSplineController.h  Nurbs.cpp  Nurbs.h  TensorProduct.cpp  TensorProduct.h
Source/Alpha/Engine/Camera/: Camera.h  EulerCamera.cpp  EulerCamera.h
Source/Alpha/Engine/Component/: SceneComponent.h
Source/Alpha/Engine/GlobalStorage/: GlobalStorage.cpp  GlobalStorage.h
Source/Alpha/Engine/Light/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
Source/Alpha/Engine/Loader/: ImageLoader.cpp  ImageLoader.h  MeshLoader.cpp  MeshLoader.h  StaticMeshLoader.cpp  StaticMeshLoader.h
Source/Alpha/Engine/Material/: Material.cpp  Material.h
Source/Alpha/Engine/Mesh/: SkeletalMeshInstance.cpp  SkeletalMeshInstance.h  SkeletalMeshModel.cpp  SkeletalMeshModel.h  StaticMeshEntity.cpp  StaticMeshEntity.h  StaticMeshInstance.cpp  StaticMeshInstance.h  StaticMeshModel.cpp  StaticMeshModel.h
Source/Alpha/Engine/Renderer/: Cubemap.cpp  Cubemap.h  DepthBuffer.cpp  DepthBuffer.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SkelatalMesh.cpp  SkeletalMesh.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h
Source/Alpha/Engine/Renderer/OpenGL/: OpenGLCubemap.cpp  OpenGLCubemap.h  OpenGLDepthBuffer.cpp  OpenGLDepthBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSkeletalMesh.cpp  OpenGLSkeletalMesh.h  OpenGLStaticMesh.cpp  OpenGLStaticMesh.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTools.h
Source/Alpha/Engine/Scene/: Scene.cpp  Scene.h
Source/Alpha/Engine/Skybox/: Skybox.cpp  Skybox.h
Source/Alpha/Engine/StaticMeshModel/: StaticMeshEntity.h  StaticMeshModel.cpp  StaticMeshModel.h
Source/Alpha/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Source/Alpha/Event/InputCode/: KeyCodes.h  MouseCodes.h
Source/Alpha/Gui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiWidget.h
Source/Alpha/Gui/BuildInWidgets/: BSplineEditorWidget.cpp  BSplineEditorWidget.h  DockerWidget.cpp  DockerWidget.h  ImGuizmoWidget.cpp  ImGuizmoWidget.h  MaterialEditorWidget.cpp  MaterialEditorWidget.h  SceneWidget.cpp  SceneWidget.h  StatsWidget.cpp  StatsWidget.h  ViewportWidget.cpp  ViewportWidget.h
Source/Alpha/Gui/ImGuiDetails/: ImGuiBuild.h  ImGuiImplGLFW.cpp  ImGuiImplGLFW.h  ImGuiImplOpenGL3.cpp  ImGuiImplOpenGL3.h
Source/Alpha/Input/: Input.cpp  Input.h
Source/Alpha/Input/DefaultInput/: DefaultInput.cpp  DefaultInput.h  DefaultInputImpl.cpp  DefaultInputImpl.h
Source/Alpha/Input/GlfwInput/: GlfwInput.cpp  GlfwInput.h
Source/Alpha/Layer/: Layer.h  LayerStack.cpp  LayerStack.h
Source/Alpha/Window/: Window.cpp  Window.h
Source/Alpha/Window/DefaultWindow/: DefaultWindow.cpp  DefaultWindow.h  DefaultWindowImpl.cpp  DefaultWindowImpl.h
Source/Alpha/Window/GlfwWindow/: GlfwWindow.cpp  GlfwWindow.h
Source/Core/: Core.hpp
Source/Core/Log/: Log.hpp
Source/Qt/: GLWidget.cpp  GLWidget.hpp  Window.cpp  Window.hpp  Window.ui
Source/Sandbox/: Sandbox.cpp  Sandbox.h
Test/: CMakeLists.txt
